restructured the code and added meta tags

--- a/create.html
+++ b/create.html
@@ -11,6 +11,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- icons and themes -->
+    <meta name="theme-color" content="#11191f" />
+    <link
+      rel="icon"
+      href="./imgs/favicon.svg"
+      sizes="any"
+      type="image/svg+xml"
+    />
+
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://mailspread.netlify.app/" />
     <meta property="og:type" content="website" />
