added autoclosing tag for brackets

--- a/create.html
+++ b/create.html
@@ -111,6 +111,7 @@
             required
             onInput="this.parentNode.dataset.replicatedValue = this.value"
             class="body-textarea"
+            id="bodyTextArea"
             name="body"
             placeholder="Enter body (click on i button for info)"
           ></textarea>
