--- a/create.html
+++ b/create.html
@@ -154,6 +154,7 @@
 
     <!-- Embed app.js -->
     <script src="./lib/jquery.min.js"></script>
+    <script src="./lib/base64.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./lib/highlight.js"></script>
     <script src="./lib/autosize.min.js"></script>
