--- a/send.html
+++ b/send.html
@@ -66,7 +66,8 @@
         <a href="https://srujangurram.me">Srujan Gurram</a>
       </p>
     </footer>
-    <!-- link send.js script -->
+    <!-- scripts -->
+    <script src="./lib/base64.js"></script>
     <script src="../js/send.js"></script>
   </body>
 </html>
