added meta tags in index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,45 @@
 <html>
   <head>
+    <!-- HTML Meta Tags -->
+    <title>Mailspread</title>
+    <meta
+      name="description"
+      content="Create and share email templates with ease !"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- icons and themes -->
+    <meta name="theme-color" content="#11191f" />
+    <link
+      rel="icon"
+      href="./imgs/favicon.svg"
+      sizes="any"
+      type="image/svg+xml"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://mailspread.netlify.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Mailspread" />
+    <meta
+      property="og:description"
+      content="Create and share email templates with ease !"
+    />
+    <meta property="og:image" content="https://i.imgur.com/JZViZMR.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="" />
+    <meta property="twitter:url" content="https://mailspread.netlify.app/" />
+    <meta name="twitter:title" content="Mailspread" />
+    <meta
+      name="twitter:description"
+      content="Create and share email templates with ease !"
+    />
+    <meta name="twitter:image" content="https://i.imgur.com/JZViZMR.png" />
+
     <script>
       window.location.href = "/create.html";
     </script>
